--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -26,14 +26,14 @@
         </div>
 </body>
 <nav>
-    <a href="index.html">about me</a>
-    <a href="skills.html">skills</a>
-    <a href="funfact.html">fun-fact</a>
+    <a href="./index.html">about me</a>
+    <a href="./skills.html">skills</a>
+    <a href="./funfact.html">fun-fact</a>
     <a href="mailto:shivamkumarjha0825@gmail.com">contact</a>
 </nav>
 <button type="submit">
-    <a href="resume-2nd year.pdf" target="_blank">resume
-        <img src="icons8-download-64.png" alt="download icon">
+    <a href="./resume-2nd year.pdf" target="_blank">resume
+        <img src="./icons8-download-64.png" alt="download icon">
     </a>
 </button>
 </header>
