--- a/skills.html
+++ b/skills.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>skills</title>
-    <link rel="stylesheet" href="skills.css">
+    <link rel="stylesheet" href="./skills.css">
 </head>
 <body>
     <header>
@@ -24,14 +24,14 @@
         </div>
         </body>
         <nav>
-            <a href="index.html">about me</a>
-            <a href="skills.html">skills</a>
-            <a href="funfact.html">fun-fact</a>
+            <a href="./index.html">about me</a>
+            <a href="./skills.html">skills</a>
+            <a href="./funfact.html">fun-fact</a>
             <a href="mailto:shivamkumarjha0825@gmail.com">contact</a>
         </nav>
         <button type="submit">
-            <a href="resume-2nd year.pdf">resume
-            <img src="icons8-download-64.png" alt="download icon">
+            <a href="./resume-2nd year.pdf">resume
+            <img src="./icons8-download-64.png" alt="download icon">
             </a>
         </button>
     </header>
